# rag-search-engine

./: .gitignore  README.md  app.py  download_data.sh  pyproject.toml
.streamlit/: config.toml
cli/: augmented_generation_cli.py  describe_image_cli.py  evaluation_cli.py  hybrid_search_cli.py  keyword_search_cli.py  multimodal_search_cli.py  semantic_search_cli.py  test_gemini.py
cli/lib/: evaluation.py  hybrid_search.py  keyword_search.py  llm.py  multimodal_search.py  rag.py  rerank.py  search_utils.py  semantic_search.py
cli/lib/prompts/: batch_rerank.md  individual_rerank.md  llm_judge.md  rewrite.md  spelling.md  summarization.md
